--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aigenjs",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Aigenjs Nodejs library",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -31,6 +31,7 @@
     "node-fetch": "^3.3.1",
     "solc": "0.8.15",
     "w3name": "^1.0.8",
-    "web3": "^4.0.2"
+    "web3": "^4.0.2",
+    "@openzeppelin/contracts": "^4.8.3"
   }
 }
